quarkus/SplunkAdapter/target/kubernetes/openshift.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 9599b1542897a1a11122799b67610b86a46e6dd8
    app.quarkus.io/build-timestamp: 2023-06-07 - 23:52:01 +0000
  labels:
    app.kubernetes.io/name: quarkus-splunk-adapter
    app.kubernetes.io/version: 1.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: quarkus-splunk-adapter
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: quarkus-splunk-adapter
    app.kubernetes.io/version: 1.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-url: <<unknown>>
        app.quarkus.io/commit-id: 9599b1542897a1a11122799b67610b86a46e6dd8
        app.quarkus.io/build-timestamp: 2023-06-07 - 23:52:01 +0000
      labels:
        app.kubernetes.io/version: 1.0-SNAPSHOT
        app.kubernetes.io/name: quarkus-splunk-adapter
        app.openshift.io/runtime: quarkus
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: JAVA_OPTIONS
              value: ""
            - name: SMALLRYE_CONFIG_LOCATIONS
              value: /mnt/app-secret
            - name: SPLUNK_SECURITY_TOKEN
              valueFrom:
                secretKeyRef:
                  key: splunk-security-token
                  name: ccm-secrets
            - name: JAVA_APP_JAR
              value: /deployments/quarkus-run.jar
          image: vicgu/quarkus-splunk-adapter:1.0-SNAPSHOT
          imagePullPolicy: Always
          name: quarkus-notification-service
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /mnt/app-secret
              name: app-secret
              readOnly: false
      volumes:
        - name: app-secret
          secret:
            optional: false
            secretName: ccm-secrets
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - quarkus-notification-service
        from:
          kind: ImageStreamTag
          name: quarkus-splunk-adapter:1.0-SNAPSHOT
      type: ImageChange
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 9599b1542897a1a11122799b67610b86a46e6dd8
    app.quarkus.io/build-timestamp: 2023-06-07 - 23:52:01 +0000
  labels:
    app.kubernetes.io/name: quarkus-splunk-adapter
    app.kubernetes.io/version: 1.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: quarkus-splunk-adapter
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: quarkus-splunk-adapter
    app.kubernetes.io/version: 1.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 9599b1542897a1a11122799b67610b86a46e6dd8
    app.quarkus.io/build-timestamp: 2023-06-07 - 23:52:01 +0000
  labels:
    app.kubernetes.io/name: quarkus-splunk-adapter
    app.kubernetes.io/version: 1.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: quarkus-splunk-adapter
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: quarkus-splunk-adapter
